2008-04-23  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Tighten the DTD as to the allowed values for
	the generic-icon needing to be listed in the Icon Naming spec

2008-04-23  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/internet.ez:
	* tests/list: Add test file for Andrew insets, and fix generic-icon

2008-04-23  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Remove the tests below, and modify the DTD to not allow
	acronyms without an expanded-acronym, and mime-types without comments
	* freedesktop.org.xml.in: Add generic-icons to all the application/
	mime-type, with a few FIXMEs, remove duplicated StuffIt mime-type, but
	keep the aliases, fix a few mime-types without comments, and missing
	acronyms or expanded-acronyms

2008-04-22  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Add check for mime-types without comments

2008-04-22  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Check for acronyms without any expanded acronyms

2008-04-22  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add generic-icon to the DTD

2008-04-22  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/ISOcyr1.ent:
	* tests/list: Patch from Pino Toscano <pino@kde.org> to add
	XML entities support, and fix the DTD mime-type to be the one
	in the RFC (Closes: #14085)

2008-04-21  Pino Toscano  <pino@kde.org>

	* Makefile.am: use $(top_builddir) instead of $(builddir) in the
	"check" target, this way it works also with automake 1.9.

2008-04-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add mime-type for MS Works
	documents, patch from Pino Toscano <pino@kde.org>
	(Closes: #12989)

	* tests/list:
	* tests/test.wps: Add test file for MS Works

2008-04-21  Pino Toscano  <pino@kde.org>

	* freedesktop.org.xml.in:
	* tests/test.cmake:
	* tests/list: Add mime-type for CMake scripts, patch from
	Aleix Pol <aleixpol@gmail.com> (Closes: #15561)
