@@ -269,14 +269,12 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-sqlite2">
     <_comment>SQLite2 database</_comment>
-    <generic-icon name="FIXME"/>
     <magic>
       <match type="string" value="** This file contains an SQLite" offset="0"/>
     </magic>
   </mime-type>
   <mime-type type="application/x-sqlite3">
     <_comment>SQLite3 database</_comment>
-    <generic-icon name="FIXME"/>
     <magic>
       <match type="string" value="SQLite format 3" offset="0"/>
     </magic>
@@ -389,7 +387,7 @@ command to generate the output files.
     <_comment>JET database</_comment>
     <acronym>JET</acronym>
     <expanded-acronym>Joint Engine Technology</expanded-acronym>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="x-office-document"/>
     <magic priority="50">
       <match offset="0" type="string" value="\x00\x01\x00\x00Standard Jet DB" />
     </magic>
@@ -434,7 +432,7 @@ command to generate the output files.
     <acronym>XPS</acronym>
     <expanded-acronym>XML Paper Specification</expanded-acronym>
     <sub-class-of type="application/zip"/>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="x-office-document"/>
     <glob pattern="*.xps"/>
   </mime-type>
   <mime-type type="application/vnd.ms-works">
@@ -474,14 +472,12 @@ command to generate the output files.
     <magic priority="50">
       <match type="string" value="\211GND\r\n\032\n" offset="0"/>
     </magic>
-    <generic-icon name="FIXME"/>
     <glob pattern="*.gnd"/>
   </mime-type>
   <mime-type type="application/vnd.ms-tnef">
     <_comment>TNEF message</_comment>
     <acronym>TNEF</acronym>
     <expanded-acronym>Transport Neutral Encapsulation Format</expanded-acronym>
-    <generic-icon name="FIXME"/>
     <magic priority="50">
       <match type="little32" value="0x223e9f78" offset="0"/>
     </magic>
@@ -513,7 +509,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/vnd.stardivision.mail">
     <_comment>StarMail email</_comment>
-    <generic-icon name="FIXME"/>
     <glob pattern="*.smd"/>
   </mime-type>
   <mime-type type="application/vnd.stardivision.math">
@@ -846,7 +841,7 @@ command to generate the output files.
     <acronym>ODB</acronym>
     <expanded-acronym>OpenOffice.org Database</expanded-acronym>
     <sub-class-of type="application/zip"/>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="x-office-document"/>
     <glob pattern="*.odb"/>
   </mime-type>
   <mime-type type="application/vnd.oasis.opendocument.image">
@@ -963,8 +958,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-arc">
     <_comment>ARC archive</_comment>
-    <acronym>ARC</acronym>
-    <expanded-acronym>FIXME</expanded-acronym>
     <generic-icon name="package-x-generic"/>
     <magic priority="50">
       <match type="little32" mask="0x8080ffff" value="0x0000081a" offset="0"/>
@@ -977,8 +970,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-archive">
     <_comment>AR archive</_comment>
-    <acronym>AR</acronym>
-    <expanded-acronym>FIXME</expanded-acronym>
     <generic-icon name="package-x-generic"/>
     <magic priority="45">
       <match type="string" value="&lt;ar&gt;" offset="0"/>
@@ -989,7 +980,7 @@ command to generate the output files.
   <mime-type type="application/x-arj">
     <_comment>ARJ archive</_comment>
     <acronym>ARJ</acronym>
-    <expanded-acronym>FIXME</expanded-acronym>
+    <expanded-acronym>Archived by Robert Jung</expanded-acronym>
     <generic-icon name="package-x-generic"/>
     <magic priority="50">
       <match type="little16" value="0xea60" offset="0"/>
@@ -1026,13 +1017,12 @@ command to generate the output files.
   <mime-type type="application/x-bcpio">
     <_comment>BCPIO document</_comment>
     <acronym>BCPIO</acronym>
-    <expanded-acronym>FIXME</expanded-acronym>
-    <generic-icon name="FIXME"/>
+    <expanded-acronym>Binary CPIO</expanded-acronym>
+    <generic-icon name="package-x-generic"/>
     <glob pattern="*.bcpio"/>
   </mime-type>
   <mime-type type="application/x-bittorrent">
     <_comment>BitTorrent seed file</_comment>
-    <generic-icon name="FIXME"/>
     <magic priority="50">
       <match type="string" value="d8:announce" offset="0"/>
     </magic>
@@ -1095,7 +1085,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-cd-image">
     <_comment>raw CD image</_comment>
-    <generic-icon name="FIXME"/>
     <glob pattern="*.iso"/>
     <glob pattern="*.iso9660"/>
   </mime-type>
@@ -1132,7 +1121,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-class-file">
     <_comment>Java byte code</_comment>
-    <generic-icon name="FIXME"/>
   </mime-type>
   <mime-type type="application/x-compress">
     <_comment>UNIX-compressed file</_comment>
@@ -1150,7 +1138,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-core">
     <_comment>program crash data</_comment>
-    <generic-icon name="FIXME"/>
     <magic priority="50">
       <match type="string" mask="0xffffffff000000000000000000000000ff" value="\177ELF            \004" offset="0"/>
       <match type="string" value="\177ELF" offset="0">
@@ -1214,12 +1201,12 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-dc-rom">
     <_comment>Dreamcast ROM</_comment>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="application-x-executable"/>
     <glob pattern="*.dc"/>
   </mime-type>
   <mime-type type="application/x-nintendo-ds-rom">
     <_comment>Nintendo DS ROM</_comment>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="application-x-executable"/>
     <glob pattern="*.nds"/>
   </mime-type>
   <mime-type type="application/x-deb">
@@ -1241,7 +1228,7 @@ command to generate the output files.
   <mime-type type="application/x-desktop">
     <_comment>desktop configuration file</_comment>
     <sub-class-of type="text/plain"/>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="text-x-generic"/>
     <magic priority="50">
       <match type="string" value="[Desktop Entry]" offset="0:32"/>
       <match type="string" value="[Desktop Action" offset="0"/>
@@ -1272,7 +1259,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-e-theme">
     <_comment>Enlightenment theme</_comment>
-    <generic-icon name="FIXME"/>
     <glob pattern="*.etheme"/>
   </mime-type>
   <mime-type type="application/x-egon">
@@ -1472,19 +1458,18 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-gameboy-rom">
     <_comment>Game Boy ROM</_comment>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="application-x-executable"/>
     <glob pattern="*.gb"/>
   </mime-type>
   <mime-type type="application/x-gba-rom">
     <_comment>Game Boy Advance ROM</_comment>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="application-x-executable"/>
     <glob pattern="*.gba"/>
   </mime-type>
   <mime-type type="application/x-gdbm">
     <_comment>GDBM database</_comment>
     <acronym>GDBM</acronym>
     <expanded-acronym>GNU Database Manager</expanded-acronym>
-    <generic-icon name="FIXME"/>
     <magic priority="50">
       <match type="big32" value="0x13579ace" offset="0"/>
       <match type="little32" value="0x13579ace" offset="0"/>
@@ -1495,13 +1480,12 @@ command to generate the output files.
     <!-- Translate this to Megadrive if the console was known as such in your locale
     Should be Megadrive in all but en_US: http://en.wikipedia.org/wiki/Megadrive#History -->
     <_comment>Genesis ROM</_comment>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="application-x-executable"/>
     <glob pattern="*.gen"/>
     <glob pattern="*.md"/>
   </mime-type>
   <mime-type type="application/x-gettext-translation">
     <_comment>translated messages (machine-readable)</_comment>
-    <generic-icon name="FIXME"/>
     <glob pattern="*.gmo"/>
     <glob pattern="*.mo"/>
   </mime-type>
@@ -1516,7 +1500,7 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-gmc-link">
     <_comment>GMC link</_comment>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="text-x-generic"/>
     <magic priority="50">
       <match type="string" value="URL:" offset="0:32"/>
     </magic>
@@ -1584,12 +1568,13 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-hdf">
     <_comment>HDF document</_comment>
-    <generic-icon name="FIXME"/>
+    <acronym>HDF</acronym>
+    <expanded-acronym>Hierarchical Data Format</expanded-acronym>
+    <generic-icon name="x-office-document"/>
     <glob pattern="*.hdf"/>
   </mime-type>
   <mime-type type="application/x-ipod-firmware">
     <_comment>iPod firmware</_comment>
-    <generic-icon name="FIXME"/>
     <magic priority="50">
       <match type="string" value="S T O P" offset="0"/>
     </magic>
@@ -1607,7 +1592,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-java">
     <_comment>Java class</_comment>
-    <generic-icon name="FIXME"/>
     <magic priority="50">
       <match type="big32" value="0xcafebabe" offset="0"/>
     </magic>
@@ -1820,7 +1804,7 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-kugar">
     <_comment>Kugar document</_comment>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="x-office-document"/>
     <glob pattern="*.kud"/>
   </mime-type>
   <mime-type type="application/x-kword">
@@ -1875,7 +1859,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-linguist">
     <_comment>message catalog</_comment>
-    <generic-icon name="FIXME"/>
     <glob pattern="*.ts"/>
   </mime-type>
   <mime-type type="application/x-lyx">
@@ -1975,7 +1958,7 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-msx-rom">
     <_comment>MSX ROM</_comment>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="application-x-executable"/>
     <glob pattern="*.msx"/>
   </mime-type>
   <mime-type type="application/x-m4">
@@ -1986,13 +1969,13 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-n64-rom">
     <_comment>Nintendo64 ROM</_comment>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="application-x-executable"/>
     <glob pattern="*.n64"/>
   </mime-type>
   <mime-type type="application/x-nautilus-link">
     <_comment>Nautilus link</_comment>
     <sub-class-of type="text/plain"/>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="text-x-generic"/>
     <magic priority="50">
       <match type="string" value="&lt;nautilus_object nautilus_link" offset="0:32"/>
     </magic>
@@ -2000,12 +1983,14 @@ command to generate the output files.
   <mime-type type="application/x-nes-rom">
     <!-- Translate this to Famicom if the console was known as such in your locale -->
     <_comment>NES ROM</_comment>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="application-x-executable"/>
     <glob pattern="*.nes"/>
   </mime-type>
   <mime-type type="application/x-netcdf">
     <_comment>Unidata NetCDF document</_comment>
-    <generic-icon name="FIXME"/>
+    <acronym>NetCDF</acronym>
+    <expanded-acronym>Network Common Data Form</expanded-acronym>
+    <generic-icon name="x-office-document"/>
     <glob pattern="*.cdf"/>
     <glob pattern="*.nc"/>
   </mime-type>
@@ -2141,14 +2126,15 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-palm-database">
     <_comment>Palm OS database</_comment>
-    <generic-icon name="FIXME"/>
     <glob pattern="*.pdb"/>
     <glob pattern="*.prc"/>
     <alias type="application/vnd.palm"/>
   </mime-type>
   <mime-type type="application/x-par2">
-    <_comment>PAR2 Parity File</_comment>
-    <generic-icon name="FIXME"/>
+    <_comment>Parchive archive</_comment>
+    <acronym>Parchive</acronym>
+    <expanded-acronym>Parity Volume Set Archive</expanded-acronym>
+    <generic-icon name="package-x-generic"/>
     <magic priority="50">
       <match offset="0" type="string" value="PAR2" />
     </magic>
@@ -2212,7 +2198,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-python-bytecode">
     <_comment>Python bytecode</_comment>
-    <generic-icon name="FIXME"/>
     <magic priority="50">
       <match type="big32" value="0x994e0d0a" offset="0"/>
     </magic>
@@ -2322,7 +2307,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-sharedlib">
     <_comment>shared library</_comment>
-    <generic-icon name="FIXME"/>
     <magic priority="50">
       <match type="string" value="\177ELF" offset="0">
         <match type="byte" value="1" offset="5">
@@ -2391,14 +2375,14 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-sms-rom">
     <_comment>Sega Master System/Game Gear ROM</_comment>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="application-x-executable"/>
     <glob pattern="*.sms"/>
     <glob pattern="*.gg"/>
   </mime-type>
   <mime-type type="application/x-snes-rom">
     <!-- Translate this as Super Famicom (in Far East Asia) or Super Nintendo (in Europe) if the console was known as such in your locale -->
     <_comment>Super NES ROM</_comment>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="application-x-executable"/>
     <glob pattern="*.smc"/>
   </mime-type>
   <mime-type type="application/x-stuffit">
@@ -2574,7 +2558,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/x-trash">
     <_comment>backup file</_comment>
-    <generic-icon name="FIXME"/>
     <glob pattern="*~"/>
     <glob pattern="*%"/>
     <glob pattern="*.bak"/>
@@ -3126,11 +3109,11 @@ command to generate the output files.
     <glob pattern="*.pict2"/>
   </mime-type>
   <mime-type type="application/x-ufraw">
-    <_comment>UFRaw ID file</_comment>
+    <_comment>UFRaw ID image</_comment>
     <acronym>UFRaw</acronym>
     <expanded-acronym>Unidentified Flying Raw</expanded-acronym>
     <sub-class-of type="text/xml"/>
-    <generic-icon name="FIXME"/>
+    <generic-icon name="image-x-generic"/>
     <glob pattern="*.ufraw"/>
   </mime-type>
   <mime-type type="image/x-dcraw">
@@ -4164,13 +4147,6 @@ command to generate the output files.
     <_comment>Java source code</_comment>
     <sub-class-of type="text/x-csrc"/>
     <glob pattern="*.java"/>
-  </mime-type>
-  <mime-type type="text/x-ksysv-log">
-    <_comment>FIXME</_comment>
-    <sub-class-of type="text/plain"/>
-    <magic priority="50">
-      <match type="string" value="KDE System V Init Editor" offset="0"/>
-    </magic>
   </mime-type>
   <mime-type type="text/x-ldif">
     <_comment>LDIF address book</_comment>
