@@ -1,5 +1,11 @@
 2008-04-23  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Fix FIXMEs for the generic icons, fix a few
+	archives' acronyms, remove the text/x-ksysv-log mime-type which
+	doesn't have a comment, and doesn't seem to be used anymore
+
+2008-04-23  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Tighten the DTD as to the allowed values for
 	the generic-icon needing to be listed in the Icon Naming spec
 
